fix(proposal-service): apply PR suggestions for JSONB indexing and validation (55-25218)